--- a/eclipse-platform-parent/pom.xml
+++ b/eclipse-platform-parent/pom.xml
@@ -674,6 +674,39 @@ No need to specify sonatype URL for "Tycho". released versions available on mave
         </repository>
       </repositories>
     </profile>
+     <profile>
+
+      <id>groovyJdtPatch47</id>
+	<properties>
+        <qualifier.format>'v'yyyyMMdd-HHmm'_GROOVY_ECLIPSE'</qualifier.format>
+        <featureToPatch>org.eclipse.jdt</featureToPatch>
+            <!--
+          For future versions, in addition to changing this value of "featureToPatchVersion",
+          the same value needs to be edited in
+          .../groovyJdtPatch47/org.eclipse.jdt.groovyJdtPatch/feature.xml
+          and
+          .../groovyJdtPatch47/org.eclipse.jdt-feature-dummy/feature.xml
+	  .../groovyJdtPacth47/org.eclipse.jdt-feature-dummy/pom.xml
+          and it of course, must "match" what ever version was produced by the build specified
+          a few lines below, as the eclipse-p2-repo-groovyJdtPatch47 p2 repository, as well as the lower
+          bound, in 'versionRangeForPatch'.
+
+        -->
+        <!-- This needs the version of the feature to be patched. -->
+        <featureToPatchVersion>3.12.0.v20160708-1700</featureToPatchVersion>
+        <!-- Can specify an exact range here, or something of a loose range, depending on what's needed. -->
+        <versionRangeForPatch>[3.12.0.v20160708-1700,3.12.0.v20160915-0800)</versionRangeForPatch>
+
+      </properties>
+      <repositories>
+        <repository>
+          <id>eclipse-p2-repo-groovyJdtPatch47</id>
+          <url>http://download.eclipse.org/eclipse/updates/4.7-I-builds</url>
+          <layout>p2</layout>
+        </repository>
+      </repositories>
+    </profile>
+
     <profile>
       <id>build-individual-bundles</id>
       <properties>
